fix: SavedEvents -> overflow not showing scrollbar

--- a/Event_Tracker_App/Event.Tracker.Web/src/pages/SavedEvents.css
+++ b/Event_Tracker_App/Event.Tracker.Web/src/pages/SavedEvents.css
@@ -5,7 +5,6 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: fit-content;
     min-height: 100%;
     z-index: 5;
     padding: 1rem;
